testing gradle daemon executions on the ci server